--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>leadflow-hub-93</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <title>Crewvia</title>
+    <meta name="description" content="Crewvia Generated Project" />
+    <meta name="author" content="Crewvia" />
 
-    <meta property="og:title" content="leadflow-hub-93" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Crewvia" />
+    <meta property="og:description" content="Crewvia Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Crewvia" />
+    <meta name="twitter:image" content="./favicon.png" />
   </head>
 
   <body>
